[package]
name = "ruw"
version = "0.0.2"
edition = "2021"
publish = true
description = "Read-Update-Write"
documentation = "https://docs.rs/ruw"
keywords = ["async", "no_std"]
categories = ["asynchronous", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/ruw"
authors = [
    "Alisa Feistel <alisafeistel@gmail.com>",
    "Timofey Prikhodko <tim@ongoteam.yaconnect.com>",
]
rust-version = "1.75"

[dependencies]
futures-core = "0.3.30"
pin-project = "1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
